endpoint.yaml
apiVersion: v1
kind: Service
metadata:
  name: end-svc
  namespace: app
  labels:
     app: endpoint
spec:
  type: LoadBalancer
  ports:
  - port: 5000
    protocol: TCP
    targetPort: 80
  selector:
    app: wordpress
