wordpress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress
  namespace: app
  labels:
    app: wordpress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wordpress
  template:
    metadata:
      labels:
        app: wordpress
    spec:
      containers:
        - name: wordpress
          imagePullPolicy: IfNotPresent
          image: wordpress
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          resources:
            requests:
              cpu: 100m
              memory: 64Mi
---
apiVersion: v1
kind: Service
metadata:
  name: wordpress-svc
  namespace: app
  labels:
     app: wordpress
spec:
  type: ClusterIP
  ports:
  - port: 7777
    protocol: TCP
    targetPort: 80
  selector:
    app: wordpress
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: wordpress-mysql
  namespace: app
  labels:
    name: mysql
spec:
  serviceName: wordpress-mysql-svc
  replicas: 1
  selector:
    matchLabels:
      name: mysql
  template:
    metadata:
      labels:
        name: mysql
    spec:
      containers:
      - image: mysql:5.6
        name: mysql
        ports:
        - containerPort: 3306
        resources:
          requests:
            cpu: 60m
            memory: 64Mi
---
apiVersion: v1
kind: Service
metadata:
  name: wordpress-mysql-svc
  namespace: app
  labels:
     app: wordpress-mysql-svc
spec:
  clusterIP: None
  ports:
  - port: 3306
    protocol: TCP
    targetPort: 3306
  selector:
    name: mysql
