ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pgadmin-ingress
  namespace: app
spec:
  rules:
    - host: hello-world.info
      http:
        paths:
          - path: /browser
            pathType: Prefix
            backend:
              service:
                name: pgadmin
                port:
                  number: 7777
